# youtube-audio-autodownload

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  audio_downloader.py  channel_ids  chapters.py  config.py  downloader.py  file_ops.py  history.py  last_download_date  lock.py  pyproject.toml  requirements-dev.txt  requirements.txt  thumbnail.py  youtube_api.py
.github/: dependabot.yml
.github/workflows/: ci.yml
tests/: conftest.py  test_audio_downloader.py  test_chapters.py  test_config.py  test_downloader.py  test_file_ops.py  test_history.py  test_lock.py  test_thumbnail.py  test_youtube_api.py
